  * Only security certificates generated by Windows UEFI Loaders were blocked by ProtectNVRAM
  * However, UEFI Windows installers/updaters may fall into the `Others` category and generate such certificates
  * Hence, certificates generated by UEFI Loaders that fall into the `Others` category are now also blocked
  * The ProtectNVRAM feature mains only active on Apple firmware
- Improves Memory Management
  * Multiple memory management improvements
- Improves Build Process
  * Calls to `ASSERT`, and similar, are activated on DEBUG Builds
    - Failed `ASSERT` calls put RefindPlus into a Deadloop
  * Enables `NOOPT` Build Target
    - This is a debug build with misc compile time optimisation items disabled
    - Log Level 2 is only exposed on this build target
- Renames the `ignore_previous_boot` config option to `transient_boot`
  * This more accurately describes the feature.
    - The current boot selection is not saved but previously saved boots are used if already saved


0.13.2.AM (13 Dec 2021):
-----------------------
- Reverts Ported APFS Volume Group Identification
  * Does not appear the Volume Group information was correctly isolated and hence, not unique
  * This resulted in MacOS volume instance conflicts
  * NOTE: Multi Instance APFS Container restrictions apply again


0.13.2.AL (12 Dec 2021):
-----------------------
- Adds `ExternalHiddenIcons` Feature
  * Sets RefindPlus to also scan external volumes for `.VolumeIcon` icons
  * This is a port of the downstream `AllHiddenIcons` feature by GitHub user @Joevt
  * Amended and renamed to reflect the target disk kind
- Improves `ScreenRGB` Feature
  * The handling of the embedded title banner has been improved by leveraging transparency
  * This significantly reduces the overall file size and ensures backgrounds are fully matched
  * This is a port of the downstream implementation by GitHub user @Joevt
- Fixes `BootKicker` and `CleanNvram` Amongst Others
  * Misc memory management defects had disabled both