@@ -45,6 +45,9 @@
   * However, UEFI Windows installers/updaters may fall into the `Others` category and generate such certificates
   * Hence, certificates generated by UEFI Loaders that fall into the `Others` category are now also blocked
   * The ProtectNVRAM feature mains only active on Apple firmware
+- Improves `SyncAPFS` Implementation
+  * The presence of a valid Volume UUID is now taken into account
+  * SyncAPFS is disabled if the Volume UUID is a NULL GUID
 - Improves Memory Management
   * Multiple memory management improvements
 - Improves Build Process
